@@ -1,3 +1,7 @@
+2008-12-23  Steffen Kamper  <info@sk-typo3.de>
+
+	* Fixed bug #9810: ClearCacheMenu doesn't work when click on icon
+
 2008-12-22  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #9932: htmlArea RTE Spellcheck does not work when TYPO3 is installed in subdir
